2002-08-30  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_address): Avoid copying string.

2002-08-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.8

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-07-22  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml.in: Set loader type to "Gnumeric_Builtin:module".

2002-07-28  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Even more function description clean up.

2002-07-27  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Function description clean up.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-06-22  Jody Goldberg <jody@gnome.org>

	* functions.c (gnumeric_offset) : no need to special case 1x1 results.
	  but add some clipping for the 2nd

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-05-21  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_column, gnumeric_row): Fix 82188.

2002-05-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* functions.c (find_index_bisection) : use value_area_get_x_y rather
	  than value_area_fetch_x_y 
	  http://bugzilla.gnome.org/show_bug.cgi?id=80126
	
2002-05-03  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* functions.c : mark argument names for translation and adjust 
	  them for use by the formula guru.