@@ -1,3 +1,8 @@
+2002-09-11  Jody Goldberg <jody@gnome.org>
+
+	* functions.c (gnumeric_address) : use sheet_name_quote and add upper
+	  bound check.
+
 2002-08-30  Morten Welinder  <terra@diku.dk>
 
 	* functions.c (gnumeric_address): Avoid copying string.
